<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_color"
            tools:context=".views.CreateFragment">

            <TextView
                android:id="@+id/create_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="23dp"
                android:text="@string/create_app"
                android:textColor="@color/text_default"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/frame_way"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/background_rectangle_grey"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/g_right"
                app:layout_constraintStart_toStartOf="@id/g_left"
                app:layout_constraintTop_toBottomOf="@id/create_text">

                <EditText
                    android:id="@+id/A_point"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_a_point"
                    android:drawablePadding="12dp"
                    android:hint="@string/where_are_we_going"
                    android:textColor="@color/black"
                    android:textColorHint="#8B8B8B" />

                <EditText
                    android:id="@+id/B_point"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_b_point"
                    android:drawablePadding="12dp"
                    android:hint="@string/where_we_go"
                    android:textColor="@color/black"
                    android:textColorHint="#8B8B8B" />
            </LinearLayout>

            <TextView
                android:id="@+id/price_create_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:text="@string/price"
                android:textColor="@color/text_default"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/edit_price"
                app:layout_constraintStart_toStartOf="@id/g_left"
                app:layout_constraintTop_toBottomOf="@id/frame_way" />

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:background="@drawable/background_rectangle_grey"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/price_create_text"
                app:layout_constraintStart_toEndOf="@id/price_create_text"
                app:layout_constraintTop_toBottomOf="@id/frame_way"
                app:layout_constraintTop_toTopOf="@id/price_create_text" />

            <TextView
                android:id="@+id/price_places_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:layout_marginEnd="2dp"
                android:text="@string/places_count"
                android:textColor="@color/text_default"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/edit_places"
                app:layout_constraintTop_toBottomOf="@id/frame_way" />

            <EditText
                android:id="@+id/edit_places"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:background="@drawable/background_rectangle_grey"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/price_places_text"
                app:layout_constraintEnd_toStartOf="@id/g_right"
                app:layout_constraintTop_toBottomOf="@id/frame_way"
                app:layout_constraintTop_toTopOf="@id/price_places_text" />

            <Button
                android:id="@+id/time_picker"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_corners"
                android:text="@string/pick_advert_time"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_create_text" />

            <EditText
                android:id="@+id/create_comments"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="38dp"
                android:background="@drawable/background_rectangle_grey"
                android:gravity="start"
                android:hint="@string/notes_to_advert"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="#8B8B8B"
                app:layout_constraintBottom_toTopOf="@id/create_ad"
                app:layout_constraintEnd_toEndOf="@id/g_right"
                app:layout_constraintStart_toStartOf="@id/g_left"
                app:layout_constraintTop_toBottomOf="@id/time_picker" />

            <Button
                android:id="@+id/create_ad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/background_rectangle_grey"
                android:backgroundTint="#00474F"
                android:text="@string/publish"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/g_right"
                app:layout_constraintStart_toStartOf="@id/g_left" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>