<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_color">

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:text="@string/my_profile"
            android:textColor="@color/text_default"
            android:textSize="32sp"
            android:textStyle="bold"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/background_profile"
            android:padding="15dp"
            android:src="@drawable/ic_profile_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_text" />

        <TextView
            android:id="@+id/name_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Даниил Можайский"
            android:textColor="@color/text_default"
            android:textSize="23sp"
            app:layout_constraintLeft_toRightOf="@id/profile_image"
            app:layout_constraintTop_toTopOf="@id/profile_image" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="mojaiskiy_daniil@edu.hse.ru"
            android:textColor="#9B9B9B"
            android:textSize="17sp"
            app:layout_constraintLeft_toRightOf="@id/profile_image"
            app:layout_constraintTop_toBottomOf="@id/name_lastName" />

        <TextView
            android:id="@+id/person_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="-----------------------------------------"
            android:textColor="#0050AE"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/profile_image"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_settings"
            android:drawablePadding="13dp"
            android:gravity="start|center"
            android:text="@string/str_settings"
            android:textAllCaps="false"
            android:textColor="@color/text_grey"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image" />

        <View
            android:id="@+id/line_settings"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="24dp"
            android:background="@color/text_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings" />

        <Button
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_info"
            android:drawablePadding="12dp"
            android:gravity="start|center"
            android:text="@string/reference"
            android:textAllCaps="false"
            android:textColor="@color/text_grey"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_settings" />

        <View
            android:id="@+id/line_info"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="24dp"
            android:background="@color/text_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info" />

        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_exit"
            android:drawablePadding="18dp"
            android:gravity="start|center"
            android:text="@string/str_exit"
            android:textAllCaps="false"
            android:textColor="@color/exit_color"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_info" />

        <View
            android:id="@+id/line_exit"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="24dp"
            android:background="@color/exit_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>